# swagger.json
@@ -2,16 +2,32 @@
   "swagger": "2.0",
   "info": {
     "title": "Employee Task Management System API",
-    "description": "Welcome to the Employee Task Management System! \n\nUse this API to manage employees and tasks. Explore the endpoints below.",
+    "description": "API documentation for managing employees and tasks in a CRUD project.",
     "version": "1.0.0"
   },
-  "host": "crud-project-pczf.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https",
-    "http"
+    "http",
+    "https"
   ],
   "paths": {
+    "/": {
+      "get": {
+        "tags": [
+          "Welcome to the Employee Task Management System!"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/employees/": {
       "get": {
         "tags": [
@@ -24,6 +40,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -65,16 +84,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
           },
           "400": {
-            "description": "Missing required field",
-            "examples": {
-              "application/json": {
-                "error": "Missing required field: <field_name>"
-              }
-            }
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -102,6 +116,15 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -149,16 +172,14 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
-            "description": "Missing required field",
-            "examples": {
-              "application/json": {
-                "error": "Missing required field: <field_name>"
-              }
-            }
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -179,8 +200,14 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -200,6 +227,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -241,16 +271,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
           },
           "400": {
-            "description": "Missing required field",
-            "examples": {
-              "application/json": {
-                "error": "Missing required field: <field_name>"
-              }
-            }
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -278,6 +303,15 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -325,16 +359,14 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
-            "description": "Missing required field",
-            "examples": {
-              "application/json": {
-                "error": "Missing required field: <field_name>"
-              }
-            }
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -355,8 +387,14 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
